03-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app.kubernetes.io/name: hello
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hello
